--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,24 @@
 body{
     background-color: aquamarine;
 }
+.block1{
+    background-color: blue;
+    height: 300px;
+    width: 50%;
+    border: 5px solid rgb(179, 62, 26);
+}.block2{
+    background-color: blue;
+    height: 300px;
+    width: 50%;
+    border: 5px solid rgb(37, 112, 59);
+}.block3{
+    background-color: blue;
+    height: 300px;
+    width: 50%;
+    border: 5px solid rgb(112, 37, 43);
+}.block4{
+    background-color: blue;
+    height: 300px;
+    width: 50%;
+    border: 5px solid rgb(90, 112, 37);
+}
